# 编译源码生成目标
add_executable(timerqueue_test timerqueue_test.cpp)
target_link_libraries(timerqueue_test myNetworkLibrary)

add_executable(threadpool_test threadpool_test.cpp)
target_link_libraries(threadpool_test myNetworkLibrary)

add_executable(redis_test redis_test.cpp)
target_link_libraries(redis_test myNetworkLibrary)